--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.38",
     "sass": "^1.72.0",
     "scss-reset": "^1.4.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
     "canvas-sketch-util": "^1.10.0",
